--- a/assets/sass/00-config-files/icons.scss
+++ b/assets/sass/00-config-files/icons.scss
@@ -47,7 +47,7 @@ $icons: (
 	//generates the .icon-XXX classes
 	@each $icon, $referenceKey in $icons {
 	    .icon-#{$icon}:before {
-	        content: $referenceKey;
+	        content: $referenceKey !important;
 	    }
 	}
 
