--- a/assets/sass/import-maps/config-map.scss
+++ b/assets/sass/import-maps/config-map.scss
@@ -5,5 +5,7 @@
 @import "../00-config-files/fonts";
 @import "../00-config-files/icons";
 @import "../00-config-files/sprite-sheets/HD-primary-sprites";
+@import "../00-config-files/sprite-sheets/HD-retina-sprites";
+@import "../00-config-files/sprite-sheets/LD-nonRetina-sprites";
 @import "../00-config-files/sprite-sheets/LD-secondary-sprites";
 @import "../00-config-files/sprite-sheets/SHEET-LIST";
