--- a/assets/sass/01-global-mixins/_css3-shortening.scss
+++ b/assets/sass/01-global-mixins/_css3-shortening.scss
@@ -25,7 +25,9 @@
 //change the origin point of css transforms
 @mixin M-origin ($origin: 0px 0px) {
 	@include M-gt-ie8 {
-		transform-origin: $origin;
+		-webkit-transform-origin: $origin;
+			-ms-transform-origin: $origin;
+				transform-origin: $origin;
 	}
 }
 
@@ -47,7 +49,9 @@
 //CSS3 element scale
 @mixin M-scale ($scale: 1,$origin: center) {
 	@include M-gt-ie8 {
-		transform: scale($scale);
+		-webkit-transform: scale($scale);
+			-ms-transform: scale($scale);
+				transform: scale($scale);
 
 		@if ($origin != center) {
 			@include M-origin($origin);
