Moved Swordion-only styles into content-modules section

--- a/assets/sass/import-maps/content-modules-map.scss
+++ b/assets/sass/import-maps/content-modules-map.scss
@@ -8,4 +8,5 @@
 @import "../04-content-modules/listings";
 @import "../04-content-modules/other";
 @import "../04-content-modules/rotator";
+@import "../04-content-modules/swordion-only";
 @import "../04-content-modules/tooltip";
