--- a/assets/sass/04-content-modules/swordion-only.scss
+++ b/assets/sass/04-content-modules/swordion-only.scss
@@ -36,7 +36,7 @@
 		Animations
 **********************************/
 .animationDemoItem {
-	margin: 5px;
+	border: 5px solid #fff;
 	padding: 20px;
 	background: #000;
 	color: #fff;
