Added columns--gutter-# classes
The columns can now easily be given gutters using classes like columns--gutter-20

--- a/assets/sass/04-content-modules/swordion-only.scss
+++ b/assets/sass/04-content-modules/swordion-only.scss
@@ -36,9 +36,9 @@
 		Animations
 **********************************/
 .animationDemoItem {
-	border: 5px solid #fff;
+	//border-width: 5px;
 	padding: 20px;
-	background: #000;
+	background-color: #000;
 	color: #fff;
 	text-align: center;
 }
