--- a/assets/sass/02-base/03-columns.scss
+++ b/assets/sass/02-base/03-columns.scss
@@ -1,3 +1,8 @@
+
+//You can alter the available column gutter classes here
+$columnGutters: 5, 10, 15, 20, 25, 30;
+
+
 //================================================*\
 /*	COLUMNS STYLING FILE						*/
 //----------------------------------------------------
@@ -6,7 +11,7 @@
 //================================================*/
 
 //The styling for the central box that holds the whole page content
-.container { margin:0 auto; max-width:bp('tablet'); }
+.container { margin:0 auto; max-width:bp('page'); }
 
 
 //================================================*\
@@ -114,5 +119,19 @@ $colWidths: (
 	&-col {
 		padding: 0;
 		margin: 0;
+		background-clip: padding-box;
+		border-color: transparent;
+		border-style: solid;
 	}
+
+	@each $gutter in $columnGutters {
+		&--gutter-#{$gutter} {
+			$actualGutter: ($gutter * 1px) / 2;
+			margin: -$actualGutter;
+			> .columns-col {
+				border-width: $actualGutter;
+			}
+		}
+	}
+
 }
