Fixed Media Queries
- "desktop" breakpoint renamed to "large".
It was confusing calling it "desktop" since realistically the desktop would share the same break point as tablet only everything higher than the breakpoint would be styled instead of everything lower than the breakpoint

- Removed style conflicts from "inside" and "outside" media queries"

- fixed issues with the xxxxxOnly and nonXxxxx classes

- added nonTablet example

--- a/assets/sass/00-config-files/break-points.scss
+++ b/assets/sass/00-config-files/break-points.scss
@@ -15,8 +15,8 @@ $breakPoints: (
 	'mobile': 600px, ///*!MAJOR BREAK POINT!*//*Maximum for strict mobile view*/
 	'mid': 770px, //*Maximum for really large phones or really small tablets*/
 	'tablet': 960px, ///*!MAJOR BREAK POINT!*//*maximum for iPads in portrait*/
-	'desktop': 1024px, //*!MAJOR BREAK POINT!*//*maximum for iPads in landscape*/
-	'page': 1200px, //*Point at which the edge of the desktop design meets the edge of the screen*/
+	'large': 1024px, //*maximum for iPads in landscape*/
+	'page': 1200px, ///*!MAJOR BREAK POINT!*//*Point at which the edge of the desktop design meets the edge of the screen*/
 );
 
 @function bp($value){
