--- a/assets/sass/01-global-mixins/_css3-shortening.scss
+++ b/assets/sass/01-global-mixins/_css3-shortening.scss
@@ -61,3 +61,11 @@
 //scale 1 and 0 are the most commonly used values
 %scale-1 { @include M-scale(1); }
 %scale-0 { @include M-scale(0); }
+
+//shortcut for displaying as Flexbox
+@mixin M-flex {
+	display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+	display: -ms-flexbox;      /* TWEENER - IE 10 */
+	display: -webkit-flex;     /* NEW - Chrome */
+	display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+}
